tekton/jib/07-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: sb
  name: sb
spec:
  containers:
  - image: docker-registry.default.svc:5000/test/sb
    imagePullPolicy: Always
    name: sb
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
