tekton/jib/08-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb
  name: sb
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: sb
  type: ClusterIP
