tekton/jib/09-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sb
  name: sb
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: sb
    weight: 100
  wildcardPolicy: None
